objects/ObjectAPIvsPropertyPath__mdt.object
<CustomObject>
    <description>This metadata stores the Object API name and Property field path for a particular object.
Created for RPP - 10774</description>
    <fields>
        <fullName>ObjAPIName__c</fullName>
        <description>Stores the API names of the Objects</description>
        <inlineHelpText>API Name of Object</inlineHelpText>
        <label>ObjAPIName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PropertyNamePath__c</fullName>
        <description>This field stores the Path of Property field to be used to fetch name of the Property in the query.</description>
        <inlineHelpText>Path of the Property name.</inlineHelpText>
        <label>PropertyNamePath</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is created to check if the Object type&apos;s property name is required to be fetched.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>ObjectAPIvsPropertyPath</label>
    <pluralLabel>ObjectAPIvsPropertyPath</pluralLabel>
</CustomObject>